# event-manager

./: .gitignore  .hg_archival.txt  .hgignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
event_manager/: __init__.py  event_manager.py  file_watch.py
eventmanager/: __init__.py  cron.py  eventmanager.py  eventmanager.yml  file_watch.py  filewatch.py  log.py
tests/: eventmanager.yml  eventmanager_test.py
