[tool.poetry]
name = "event-manager"
version = "1.0.0"
description = "A lightweight workflow tool."
authors = ["Cj Lin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
inotify-simple = "^1.3.5"
psutil = "^5.9.0"
python-dateutil = "^2.8.2"
PyYAML = "^6.0.0"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
event-manager = "event_manager:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
