[metadata]
name = eventmanager
description = A lightweight workflow tool
long_description = file: README.rst
author = Cj Lin
author_email = kevin76630@gmail.com
url = https://github.com/cj-lin/EventManager
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    networkx
    psutil
    python-dateutil
    pyyaml
    sortedcontainers
    typer
    watchdog
