[metadata]
name = eventmanager
version = 1.0
description = A lightweight workflow tool
long_description = file: README.rst
author = cj-lin
author_email = kevin76630@gmail.com
url = https://github.com/cj-lin/EventManager
license = MIT

[entry_points]
console_scripts =
    eventmanager = eventmanager:cli

[options]
zip_safe = False
packages = find:
install_requires =
    networkx
    psutil
    python-dateutil
    pyyaml
    sortedcontainers
    typer
    watchdog

[options.package_data]
* = *
